--- a/package.json
+++ b/package.json
@@ -5,17 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "vite",
-    "build": "rm -rf build && vite build",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf build",
+    "build": "npm run clean && vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jalu Cahyo Senodiputro <jalucahyoseno@gmail.com>",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "gh-pages": "^6.3.0",
     "sass": "^1.93.1",
     "vite": "^7.1.7"
   },
